lightbird/components/main.css
/*
  Lightbird - main.css
  https://github.com/reizumii/lightbird
*/

/* main */
#tabmail {
  background-color: var(--lb-panel-bgcolor);
  border-top-left-radius: 8px;
  border: 1px solid var(--lb-border-color-2);
  border-bottom: 0;
  border-right: 0;
  overflow: clip;
  backdrop-filter: blur(14px) saturate(115%) !important;
}

/* TODO: change this */
#tabpanelcontainer {
  background-color: transparent !important;
}
#folderPane {
  --sidebar-background: transparent;
}
:root:not(#messengerWindow) {
  background: transparent !important;
  --foldertree-background: transparent !important;
}
.list-header-bar:not([hidden]) {
  --layout-background-1: transparent;
}
#threadTree[rows="thread-card"] {
  --tree-pane-background: transparent;
}

/* list tree */
#folderPaneHeaderBar {
  min-height: var(--lb-header-height);
  flex-direction: row !important;
  border-bottom: 1px solid var(--lb-border-color-1) !important;
  --sidebar-header-spacing: 0 8px;
  --sidebar-header-gap: var(--lb-button-gap);
}
#folderPaneWriteMessage {
  margin-right: auto !important;
  order: -1;
}
#folderPaneMoreButton {
  order: 1;
}
#folderTree {
  &::before {
    background-image: none !important;
  }
  &, & ul {
    --indent: calc(10px + (32px * var(--depth))) !important;
  }
  & li {
    &[data-server-type] > .container > .name {
      font-weight: normal !important;
    }
    & > .mode-container {
      & > .mode-name {
        font-size: var(--lb-font-size-md) !important;
      }
    }
  }
  & > li {
    & > .mode-container {
      margin-inline: 4px !important;

      & > .mode-button {
        --button-margin: 0 6px;
      }
    }
  }
  & .icon {
    width: var(--lb-icon-size-md) !important;
    height: var(--lb-icon-size-md) !important;
    fill: var(--lb-text-color) !important;
  }
}
:is(ul, ol)[role="tree"] {
  & .container {
    font-size: var(--lb-font-size-md);
    margin-block: 2px;
    padding-inline-end: 10px;
    border: 0 !important;

    & .twisty {
      order: 99;
      --list-item-buttons-size: var(--lb-icon-size-xs);

      & .twisty-icon {
        content: var(--lb-icon-chevron-down-12);
        fill: var(--lb-text-color);
        transform: rotate(180deg) !important;
      }
    }
    li.children.collapsed > & .twisty-icon {
      transform: unset !important;
    }
    &::before {
      height: var(--lb-icon-line-md);
      border: 0 !important;
      inset-inline-start: calc(var(--indent) - 10px) !important;
      top: 50% !important;
      transform: translateY(-50%) !important;
    }
    li.selected > &::before {
      --indicator-background: var(--selected-item-color);
    }
  }
}
.name {
  margin-inline-start: var(--lb-list-item-gap) !important;

  .unread > .container > &,
  .new-messages > .container > & {
    font-weight: normal !important;
  }
}
.folder-count-badge {
  padding-block: 0 !important;
  font-size: var(--lb-font-size-xxs) !important;
  font-variant-numeric: unset !important;
  border: 0 !important;
}
.unread-count {
  .unread > .container > & {
    --folderpane-unread-count-background: var(--selected-item-color);
  }
  .unread.children.collapsed:has(ul > .unread) > .container > &,
  .new-messages.unread.children.collapsed:has(ul > .new-messages) > .container > & {
    background-color: var(--folderpane-unread-count-background) !important;
    color: var(--folderpane-unread-count-text) !important;
  }
}

/* list header */
.list-header-bar:not([hidden]) {
  min-height: var(--lb-header-height);
  --thread-pane-header-padding: 14px 6px;
}
@media (prefers-color-scheme: dark) {
  .list-header-bar:not([hidden]) {
    background: rgba(0, 0, 0, 0.45) !important;
  }
}
.list-header-bar-container-start,
.list-header-bar-container-end {
  padding: 0 !important;
}
.list-header-bar-container-start {
  flex-direction: column;
  align-items: start !important;
  gap: 0 !important;
}
.list-header-bar-container-end {
  gap: var(--lb-button-gap) !important;
}
.list-header-title {
  font-size: var(--lb-font-size-md) !important;
}
#threadPaneFolderCountContainer {
  display: flex;
}
.thread-pane-count-info {
  font-size: var(--lb-font-size-xs) !important;
  padding-inline-start: 0 !important;
  color: var(--lb-text-ghost-color);
}

/* mail: quick filter */
#quick-filter-bar {
  margin: 4px;
  border: 1px solid var(--lb-border-color-2) !important;
  border-radius: var(--button-border-radius);
  --layout-background-1: var(--lb-panel-bgcolor);
  --qfb-padding: 5px 8px;
}
@media (prefers-color-scheme: dark) {
  #quick-filter-bar {
    background: rgba(0, 0, 0, 0.4) !important;
  }
}
#quickFilterBarContainer {
  align-items: center;
  flex-wrap: unset !important;
  gap: 4px;
}
#qfb-qs-textbox {
  max-height: var(--lb-button-height);
  margin: 0 !important;
  order: -1;
}
#qfb-results-label[style="visibility: hidden;"] {
  display: none;
}
#qfd-dropdown {
  --icon-filter: var(--lb-icon-filter-add);
}

/* mail: card */
[is="tree-view-table-body"] {
  & > .card-layout > td {
    padding-inline: 4px !important;

    & > .card-container {
      border: 0 !important;
      --tree-card-background: transparent;
      --tree-card-content-radius: var(--button-border-radius);

      &::before {
        height: var(--lb-icon-line-xl);
        border: 0 !important;
        inset-inline-start: 0 !important;
        top: 50% !important;
        transform: translateY(-50%) !important;
        --indicator-width: 3px;
      }
    }
  }
  & > .card-layout {
    &:is(:hover, :focus, :focus-within) {
      & .card-container {
        box-shadow: none !important;
        --tree-card-background: var(--lb-button-hover-bgcolor);

        & .tree-button-more {
          display: flex !important;
        }
      }
    }
  }
  &:not(:focus, :focus-within) .card-layout {
    &.selected {
      & .card-container::before {
        --indicator-background: var(--selected-item-color);
      }
    }
  }
}
/* ... */

